crates/nidus/tests/ui/route_outside_route_method.stderr
error: #[get] can only be used on route methods
 --> tests/ui/route_outside_route_method.rs:3:1
  |
3 | #[get("/users")]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `get` (in Nightly builds, run with -Z macro-backtrace for more info)
