crates/nidus/tests/ui/route_outside_route_method.rs
use nidus::prelude::*;

#[get("/users")]
async fn users() {}

fn main() {}
